# schemaforge

./: .gitignore  Cargo.toml  Makefile  README.md  Taskfile.yml  acton-ai.toml  config.toml  package-lock.json  package.json
crates/schema-forge-acton/: Cargo.toml  build.rs
crates/schema-forge-acton/src/: access.rs  actor.rs  auth.rs  cedar.rs  config.rs  conversions.rs  error.rs  extension.rs  form.rs  lib.rs  messages.rs  middleware.rs  shared.rs  shared_auth.rs  state.rs  system.rs  template_engine.rs  theme.rs  views.rs  webhook.rs
crates/schema-forge-acton/src/admin/: auth.rs  error.rs  form.rs  handlers.rs  mod.rs  routes.rs  templates.rs  views.rs
crates/schema-forge-acton/src/authz/: adapters.rs  engine.rs  loader.rs  mod.rs  namespace.rs  principal_claims.rs  record_policy.rs  role_ranks.rs  store.rs
crates/schema-forge-acton/src/cedar/: mod.rs  policy_gen.rs  schema_gen.rs
crates/schema-forge-acton/src/cloud/: auth.rs  css.rs  handlers.rs  mod.rs  overrides.rs  routes.rs  templates.rs
crates/schema-forge-acton/src/graphql/: context.rs  input_types.rs  mod.rs  resolvers.rs  schema_builder.rs  type_mapping.rs
crates/schema-forge-acton/src/hooks/: dispatch_actor.rs  mod.rs  tonic_dispatcher.rs
crates/schema-forge-acton/src/routes/: auth.rs  entities.rs  files.rs  meta.rs  mod.rs  permissions.rs  query_params.rs  schemas.rs  users.rs
crates/schema-forge-acton/src/site/: auth.rs  error.rs  handlers.rs  routes.rs  templates.rs
crates/schema-forge-acton/src/storage/: config.rs  mod.rs  s3.rs
crates/schema-forge-acton/src/widget/: auth.rs  css.rs  error.rs  handlers.rs  mod.rs  routes.rs  templates.rs
crates/schema-forge-acton/static/css/: admin.css  cloud-input.css  cloud.css  input.css  site.css
crates/schema-forge-acton/templates/admin/: base.html  dashboard.html  entity_detail.html  entity_form.html  entity_list.html  login.html  schema_detail.html  schema_editor.html  user_form.html  user_list.html
crates/schema-forge-acton/templates/admin/fragments/: dsl_preview.html  entity_table_body.html  field_editor_row.html  field_input.html  flash_message.html  migration_preview.html  relation_options.html  type_constraints.html
crates/schema-forge-acton/templates/atoms/: array_input.html  checkbox.html  composite.html  datetime_input.html  fallback_input.html  field_display.html  json_editor.html  number_input.html  select.html  text_input.html  textarea.html
crates/schema-forge-acton/templates/cloud/: base.css  base.html  dashboard.html  entity_detail.html  entity_form.html  entity_list.html  entity_list_kanban.html  login.html
crates/schema-forge-acton/templates/cloud/atoms/: composite.html  field_display.html  field_input.html  sidebar_macros.html
crates/schema-forge-acton/templates/cloud/fragments/: entity_list_body.html
crates/schema-forge-acton/templates/cloud/molecules/: shell_header_user_controls.html  shell_logo.html  shell_mobile_disclosure.html  (+7 more)
crates/schema-forge-acton/templates/forge/: entity_detail.html  entity_form.html  entity_list.html  entity_list_cards.html  entity_list_compact.html  entity_list_table.html  entity_table.html
crates/schema-forge-acton/templates/molecules/: dashboard_card.html  entity_row.html  pagination.html
crates/schema-forge-acton/templates/organisms/: entity_detail_full.html  entity_detail_split.html  entity_detail_tabbed.html  entity_list_cards.html  entity_list_compact.html  entity_list_table.html
crates/schema-forge-acton/templates/site/: base.html  entities.html  entity_detail.html  entity_form.html  index.html  login.html  login_card.html
crates/schema-forge-acton/tests/: admin_integration.rs  auth_demo.rs  auth_login.rs  cedar_optional_principal_attr_spike.rs  file_field_e2e.rs  hooks_integration.rs  integration.rs  principal_claims_integration.rs  principal_claims_login_integration.rs  tonic_dispatcher_integration.rs  users.rs
crates/schema-forge-acton/tests/proto/: translation_hooks.proto
crates/schema-forge-ai/: Cargo.toml
crates/schema-forge-ai/src/: agent.rs  cli.rs  endpoint.rs  error.rs  lib.rs  prompt.rs
crates/schema-forge-ai/src/tools/: apply.rs  cedar.rs  list.rs  mod.rs  read_schema.rs  validate.rs
crates/schema-forge-backend/: Cargo.toml
crates/schema-forge-backend/src/: auth.rs  entity.rs  entity_auth_store.rs  error.rs  lib.rs  tenant.rs  traits.rs  user_store.rs
crates/schema-forge-backend/tests/: proptest_security_invariants.rs
crates/schema-forge-cli/: Cargo.toml  build.rs
crates/schema-forge-cli/src/: cli.rs  config.rs  diagnostic.rs  error.rs  main.rs  output.rs  progress.rs
crates/schema-forge-cli/src/commands/: apply.rs  bootstrap_admin.rs  completions.rs  export.rs  generate.rs  hooks.rs  init.rs  inspect.rs  migrate.rs  mod.rs  parse.rs  policies.rs  serve.rs  templates.rs  token.rs
crates/schema-forge-cli/templates/site/: index.html.jinja  package.json.jinja  tailwind.config.ts.jinja  vite.config.ts.jinja
crates/schema-forge-cli/tests/: cli_integration.rs  hooks_generate.rs  site_generate.rs
crates/schema-forge-cli/tests/site_e2e/: README.md  demo.schema  run.sh
crates/schema-forge-core/: Cargo.toml
crates/schema-forge-core/src/: error.rs  inverse_relations.rs  lib.rs  migration.rs  query.rs  system_schemas.rs
crates/schema-forge-core/src/types/: annotation.rs  cardinality.rs  cedar_reserved.rs  default_value.rs  dynamic_value.rs  entity_id.rs  enum_variants.rs  field_annotation.rs  field_definition.rs  field_modifier.rs  field_name.rs  field_type.rs  file_constraints.rs  float_constraints.rs  integer_constraints.rs  mod.rs  schema_definition.rs  schema_id.rs  schema_name.rs  schema_version.rs  text_constraints.rs
crates/schema-forge-core/tests/: crm_integration.rs  migration_integration.rs  proptest_migration_query.rs  proptest_types.rs
crates/schema-forge-postgres/: Cargo.toml
crates/schema-forge-postgres/src/: auth.rs  backend.rs  codegen.rs  lib.rs  query.rs  value.rs
crates/schema-forge-surrealdb/: Cargo.toml
crates/schema-forge-surrealdb/src/: auth.rs  backend.rs  codegen.rs  lib.rs  query.rs  value.rs
(+183 files in other folders)
