[workspace]
resolver = "2"
members = [
    "crates/schema-forge-core",
    "crates/schema-forge-dsl",
    "crates/schema-forge-backend",
    "crates/schema-forge-surrealdb",
    "crates/schema-forge-acton",
    "crates/schema-forge-cli",
    "crates/schema-forge-postgres",
]

[patch.crates-io]
acton-service = { path = "/home/rodzilla/code/active/acton-service/acton-service" }
