[package]
name = "schema-forge-acton"
version = "0.7.0"
edition = "2021"

[dependencies]
schema-forge-core = { path = "../schema-forge-core" }
schema-forge-backend = { path = "../schema-forge-backend" }
axum = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync"] }
acton-service = { version = "0.16.0", default-features = false, features = ["http"] }
askama = { version = "0.15.4", optional = true }
schema-forge-dsl = { path = "../schema-forge-dsl" }
schema-forge-surrealdb = { path = "../schema-forge-surrealdb", optional = true }
async-graphql = { version = "7.2", features = ["dynamic-schema"], optional = true }
async-graphql-axum = { version = "7.2", optional = true }
arc-swap = { version = "1", optional = true }
tracing = { version = "0.1", optional = true }

[features]
admin-ui = ["acton-service/htmx-full", "dep:askama", "dep:schema-forge-surrealdb", "dep:arc-swap"]
widget-ui = ["acton-service/htmx-full", "dep:askama", "dep:arc-swap"]
cloud-ui = ["widget-ui", "dep:schema-forge-surrealdb"]
graphql = ["dep:async-graphql", "dep:async-graphql-axum", "dep:arc-swap", "dep:tracing"]

[dev-dependencies]
schema-forge-surrealdb = { path = "../schema-forge-surrealdb" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
http-body-util = "0.1"
