[package]
name = "schema-forge-acton"
version = "0.13.1"
edition = "2021"

[dependencies]
schema-forge-core = { path = "../schema-forge-core" }
schema-forge-backend = { path = "../schema-forge-backend" }
axum = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync"] }
acton-service = { version = "0.22", default-features = false, features = ["http", "observability", "otel-metrics", "journald", "governor", "resilience", "audit", "openapi", "htmx-full"] }
schema-forge-dsl = { path = "../schema-forge-dsl" }
schema-forge-surrealdb = { path = "../schema-forge-surrealdb", optional = true }
schema-forge-postgres = { path = "../schema-forge-postgres", optional = true }
async-graphql = { version = "7.2", features = ["dynamic-schema"], optional = true }
async-graphql-axum = { version = "7.2", optional = true }
arc-swap = { version = "1", optional = true }
tracing = { version = "0.1" }
tower-http = { version = "0.6", features = ["fs"] }
minijinja = { version = "2", features = ["loader"] }
reqwest = { version = "0.13.2", features = ["json"] }
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
uuid = { version = "1.23.0", features = ["v4"] }
humantime = "2.3.0"


[features]
surrealdb = ["acton-service/surrealdb", "dep:schema-forge-surrealdb"]
postgres = ["acton-service/database", "dep:schema-forge-postgres"]
graphql = ["dep:async-graphql", "dep:async-graphql-axum", "dep:arc-swap"]

[dev-dependencies]
schema-forge-surrealdb = { path = "../schema-forge-surrealdb" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
http-body-util = "0.1"
tempfile = "3.25.0"
