[package]
name = "schema-forge-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
schema-forge-core = { path = "../schema-forge-core" }
schema-forge-dsl = { path = "../schema-forge-dsl" }
schema-forge-acton = { path = "../schema-forge-acton" }
schema-forge-backend = { path = "../schema-forge-backend" }
acton-ai = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "io-util", "io-std", "macros"] }
axum = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
