[package]
name = "schema-forge-ai"
version = "0.2.0"
edition = "2021"

[dependencies]
schema-forge-core = { path = "../schema-forge-core" }
schema-forge-dsl = { path = "../schema-forge-dsl" }
schema-forge-acton = { path = "../schema-forge-acton" }
schema-forge-backend = { path = "../schema-forge-backend" }
acton-ai = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "io-util", "io-std", "macros"] }
axum = "0.8"
arc-swap = { version = "1", optional = true }

[features]
admin-ui = ["schema-forge-acton/admin-ui", "dep:arc-swap"]
cloud-ui = ["schema-forge-acton/cloud-ui", "dep:arc-swap"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
