[package]
name = "schema-forge-cli"
version = "0.8.0"
edition = "2021"

[[bin]]
name = "schemaforge"
path = "src/main.rs"

[dependencies]
schema-forge-core = { path = "../schema-forge-core" }
schema-forge-dsl = { path = "../schema-forge-dsl" }
schema-forge-backend = { path = "../schema-forge-backend" }
schema-forge-surrealdb = { path = "../schema-forge-surrealdb", optional = true }
schema-forge-postgres = { path = "../schema-forge-postgres", optional = true }
schema-forge-acton = { path = "../schema-forge-acton" }
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
glob = "0.3"
axum = { version = "0.8" }
acton-service = { version = "0.22", default-features = false, features = ["http", "observability", "otel-metrics", "journald", "governor", "resilience", "audit", "openapi", "auth"] }

[features]
default = ["surrealdb"]
surrealdb = ["dep:schema-forge-surrealdb", "schema-forge-acton/surrealdb", "acton-service/surrealdb"]
postgres = ["dep:schema-forge-postgres", "schema-forge-acton/postgres", "acton-service/database"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tower = { version = "0.5" }
