[package]
name = "schema-forge-core"
version = "0.5.1"
edition = "2021"

[dependencies]
mti = { version = "1.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
proptest = "1"
