[package]
name = "schema-forge-postgres"
version = "0.5.0"
edition = "2021"

[dependencies]
schema-forge-core = { path = "../schema-forge-core" }
schema-forge-backend = { path = "../schema-forge-backend" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "chrono", "uuid"] }
argon2 = "0.5.3"
password-hash = "0.6.0"
rand = "0.10.0"
arc-swap = "1.9.1"
tokio = { version = "1", features = ["macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
