[package]
name = "schema-forge-surrealdb"
version = "0.3.0"
edition = "2021"

[dependencies]
schema-forge-core = { path = "../schema-forge-core" }
schema-forge-backend = { path = "../schema-forge-backend" }
surrealdb = { version = "2", features = ["kv-mem", "protocol-ws", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
